<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/course_rl_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentTop="true" />
        <!--android:background="@color/horizontal_line"-->
        <TextView
            android:id="@+id/course_tv_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:drawableLeft="@drawable/ic_course_refund"
            android:drawablePadding="5dp"
            android:text="@string/course_allow_refund"
            android:textColor="@color/text_orange"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/course_tv_buy"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_rounded_course_buy"
            android:gravity="center"
            android:text="@string/course_buy"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>

    <ScrollView
        android:id="@+id/course_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/course_rl_bottom_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/course_rl_cover_background"
                android:layout_width="match_parent"
                android:layout_height="336dp">

                <ImageView
                    android:id="@+id/course_iv_cover"
                    android:layout_width="180dp"
                    android:layout_height="240dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_test_course_cover" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/course_tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="现在，发现你的优势"
                    android:textColor="@color/text_black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/course_rl_commend"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_rounded_item_course_price">

                    <ImageView
                        android:id="@+id/course_iv_commend"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/selector_course_commend" />

                    <TextView
                        android:id="@+id/course_tv_commend_people_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/course_iv_commend"
                        android:layout_centerHorizontal="true"
                        android:text="@string/course_like"
                        android:textColor="@color/text_orange"
                        android:textSize="11sp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/course_tv_second_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/course_tv_title"
                    android:layout_toLeftOf="@id/course_rl_commend"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:text="属于你的职场晋升第一课"
                    android:textColor="@color/my_text_gray"
                    android:textSize="13sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="29dp"
                android:drawableLeft="@drawable/ic_course_about"
                android:drawablePadding="8dp"
                android:text="@string/course_about"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/course_tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_left_line_course_about"
                android:text="本专题旨在帮助在职业规划方面有困惑，对职业选择有着疑问的用户。通过大量的研究经验，从职业发展远景等各种情况进行综合考量，来引导自己职业生涯进行更全面、深入、系统性的思考。"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                android:lineSpacingExtra="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/app_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_course_solve_problem"
                android:drawablePadding="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="18dp"
                android:text="@string/course_solve_problem"
                android:textSize="16sp"
                android:textColor="@color/text_black"
                android:textStyle="bold" />

            <View.HintLayout
                android:id="@+id/course_ll_solve_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </View.HintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/app_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:drawableLeft="@drawable/ic_course_content"
                android:drawablePadding="8dp"
                android:text="@string/course_content"
                android:textSize="16sp"
                android:textColor="@color/text_black"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/course_recycler_view_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/app_background" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_course_message"
                    android:drawablePadding="9dp"
                    android:text="@string/course_message"
                    android:textSize="16sp"
                    android:textColor="@color/text_black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/course_tv_write_message"
                    android:layout_width="48dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_rounded_course_write_message"
                    android:text="@string/course_write_message"
                    android:textSize="12sp"
                    android:textColor="@color/text_green" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/course_recycler_view_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@color/app_background" />

        </LinearLayout>

    </ScrollView>

    <!--需要写在 ScrollView 之后，保证标题始终悬浮在 ScrollView 上-->
    <RelativeLayout
        android:id="@+id/course_rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/course_rl_title_bar_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_title_back" />

        <ImageView
            android:id="@+id/course_rl_title_bar_iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_title_share" />

        <TextView
            android:id="@+id/course_rl_title_bar_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:text="现在，发现你的优势"
            android:textColor="@color/text_black"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>
